--- a/docs/pages/style.css
+++ b/docs/pages/style.css
@@ -3,8 +3,48 @@ html {
   background-color: #f5f5f5;
 }
 
-#content {
-  width: 66.6%;
-  margin-left: auto;
-  margin-right: auto;
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+
+
+nav {
+  background-color: #f5f5f5;
+  width: 15%;
+  height: 100vh;
+  padding-top: 20px;
+  top: 0;
+  position: sticky;
+  border-right: black 2px solid;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  margin-bottom: 10px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #333;
+  display: block;
+  padding: 5px 10px;
+}
+
+nav a:hover {
+  background-color: #333;
+  color: #fff;
+}
+
+main {
+  width: 85%;
+  padding: 20px;
 }
