--- a/docs/pages/style.css
+++ b/docs/pages/style.css
@@ -22,16 +22,12 @@ html {
 
 h1 {
   line-height: 0;
-}
-
-h1,
-h2,
-h3 {
   font-weight: 500;
 }
 
 h2,
 h3 {
+  font-weight: 500;
   text-decoration: underline;
 }
 
@@ -46,7 +42,7 @@ i {
 }
 
 code {
-  font-family: 'BerkeleyMono', sans-serif;
+  font-family: 'BerkeleyMono', monospace;
   font-style: normal;
   line-height: normal;
 }
